[gd_scene load_steps=12 format=2]

[ext_resource path="res://objects/bodies/top_down_body.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/bodies/characters/player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/characters/green_guy.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/characters/blinking.png" type="Texture" id=4]
[ext_resource path="res://objects/bodies/characters/props/pickable_object_sprite_circle.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=8]
radius = 7.0
height = 12.0

[sub_resource type="Animation" id=3]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Expressions:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 7, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[node name="Player" index="0" instance=ExtResource( 1 )]
z_index = 1
collision_layer = 1025
collision_mask = 1025
script = ExtResource( 2 )
max_speed = 100.0
acceleration = 10.0

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -10 )
texture = ExtResource( 3 )
vframes = 4
hframes = 3

[node name="Expressions" type="Sprite" parent="Sprite" index="0"]
visible = false
texture = ExtResource( 4 )
hframes = 6

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 8 )

[node name="PickableObjectSprite" type="Sprite" parent="." index="2"]

[node name="Circle" type="Node2D" parent="PickableObjectSprite" index="0"]
show_behind_parent = true
script = ExtResource( 5 )
radius = 7.5
color = Color( 0.85, 0.8, 1, 1 )

[node name="RayCast2D" type="RayCast2D" parent="." index="3"]
enabled = true
cast_to = Vector2( 0, 18 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
autoplay = "idle"
anims/idle = SubResource( 3 )
anims/walk_down = SubResource( 4 )
anims/walk_left = SubResource( 5 )
anims/walk_right = SubResource( 6 )
anims/walk_up = SubResource( 7 )
[connection signal="body_movement_stopped" from="." to="." method="_on_Player_body_movement_stopped"]
[connection signal="direction_changed" from="." to="." method="_on_Player_direction_changed"]
[connection signal="texture_changed" from="PickableObjectSprite" to="PickableObjectSprite/Circle" method="_on_PickableObjectSprite_texture_changed"]
